@@ -1,8 +1,12 @@
-2024-07-08  Charlie Zender  <zender@uci.edu>
+2024-07-18  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.7-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha04: Fake Orangina';git push
 	git tag -a 5.2.7-alpha04 -m 'ncks chk_map area_a/b dmt lcn';git push --tags
+
+	* ncclimo add prc_opt to debug output
+
+2024-07-08  Charlie Zender  <zender@uci.edu>
 
 	* chk_map: Output side of equi-areal square instead of radius of equi-areal circle
 
